# code-injection

./: .gitmodules
direct-syscall/: Cargo.toml  encrypt.py  syscall.asm
direct-syscall/src/: crypt.rs  download.rs  main.rs
dll-injection/: Cargo.toml
dll-injection/src/: dll.rs  main.rs
indirect-syscalls/: Cargo.toml  build.rs  syscalls.asm
indirect-syscalls/src/: dowload.rs  indirect_loader.rs  lib.rs  main.rs  sleep.rs  utils.rs
indirect-syscalls/src/indirect_syscalls/: globals.rs  mod.rs  resolver.rs  stubs.rs
ntapi-injector/: Cargo.toml
ntapi-injector/src/: encrypt.py  main.rs
shellcode-injection/: Cargo.toml
shellcode-injection/src/: main.rs
