[package]
name = "indirect-syscalls"
version = "0.1.0"
edition = "2021"

[dependencies]
hostname = "0.4.0"
winapi = { version = "0.3.9", features = ["basetsd", "processthreadsapi", "handleapi", "libloaderapi", "winnt", "minwindef", "ntdef"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.15", features = ["json"] }
block-modes = { version = "0.9" }
block-padding = "0.3"
hex = "0.4"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
aes = "0.8"
cbc = "0.1"
base64 = { version = "0.22.1", features = [] }
crypto = {version = "0.5.1"}
windows-sys = "0.52.0"
[build-dependencies]
cc = "1.0"
